# budget_app

./: Cargo.toml  docker-compose.yml  notes
migrations/: 20260119194710_create_budget_tables.sql  20260119195532_create_user_login_data.sql  20260119202732_add_user_id_to_budget.sql  20260119211415_add_user_sessions_to_budget.sql  20260124213431_family_user_permissions.sql  20260124223843_add_family_id_to_budgets.sql  20260207203116_create_password_resets.sql
src/: auth.rs  budget.rs  email.rs  family.rs  main.rs
src/auth/: forgot_password.rs  guard.rs  jwt.rs  login.rs  logout.rs  mod.rs  refresh.rs  reset_password.rs
src/routes/: budget.rs  mod.rs
static/budget/css/: styles.css
static/budget/html/: index.html  result.html
static/budget/js/: theme.js
static/css/: login.css  main.css
static/js/: button.js  login.js  theme.js
static/login/css/: login.css
static/login/html/: login.html
templates/: access_denied.html  budget_index.html  budget_result.html  forgot_password.html  incorrect_login_credentials.html  login.html  register.html  reset_password.html
