[package]
name = "budget_app"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=/DEBUG:NONE"]

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6", features = ["fs"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core"] }
rand = "0.8"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = { version = "0.15", features = ["rt_tokio_1", "serde"] }
urlencoding = "2"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
anyhow = "1"
sha2 = "0.10"
base64 = "0.22"
html-escape = "0.2"
time = "0.3"
